Fix issue with header being squished by the notes section when too large in IE and Firefox.

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -16,7 +16,6 @@ body {
 
 .header {
   display: block;
-  overflow: hidden;
   background-color: $primary_black;
   padding: 20px 10px;
 
@@ -79,6 +78,7 @@ body {
 /* Create a column layout with Flexbox */
 .row {
   display: flex;
+  height: 100%;
 }
 
 /* Left column (menu) */
